# modal-esm

./: .gitmodules  pyproject.toml
modal_esm/: 1YFP.pdbx  af.py  af2_bind.py  dssp_test.py  fold.py  prompt_template.ipynb  protein_prompt_template.py  rcsb_pdb_6ARU.fasta  redesign.py  run_af.ipynb  run_modal.ipynb
modal_esm/scratchwork/: esm-main.py  prototype.ipynb  saprot-modal.py  saprot_evoprotgrad.ipynb
tests/: test_protein_prompt.py
