[tool.poetry]
name = "modal-esm"
version = "0.1.0"
description = ""
authors = ["Alex Naka <alex.naka@gmail.com>"]
readme = "README.md"
packages = [{include = "modal_esm"}]

[tool.poetry.dependencies]
python = "^3.10"
modal = "^0.63.90"
ipykernel = "^6.29.5"
numpy = "<2"
pytest = "^8.3.2"

[tool.poetry.group.extras]
optional = true

[tool.poetry.group.extras.dependencies]
esm = "^3.0.0.post2"
#safetensors = "^0.4.3"
huggingface-hub = "^0.23.4"
#seaborn = "^0.13.2"
#ipywidgets = "^8.1.3"
#py3dmol = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
